# GF2-Elimination

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/core/: context.c  context.h  ge_base.cpp  ge_omp.cpp  ge_pthread.cpp  ge_simd.cpp  type.h
src/utils/: data_loader.cpp  rw_mutex.h
test/: CMakeLists.txt  context_test.cpp  hello_test.cpp
